Fix log scrolling on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -283,6 +283,7 @@ li {
 .log {
   position: absolute;
   width: 400px;
+  max-width: 100%;
   padding-left: 1rem;
   padding-right: 1rem;
   padding-top: 1rem;
